# Financial-Agent

./: .gitignore  AGENTS.md  BACKEND_REQUIREMENTS.md  PLAN.md  README.md  adaption.md  backend.sh  frontend.sh  implementation.md
backend/: pyproject.toml
backend/app/: __init__.py  errors.py  main.py  schemas.py
backend/app/api/: __init__.py  charts.py  dashboard.py  financials.py  sec.py  social.py  stocks.py
backend/app/core/: cache.py  config.py  env.py  watchlist.py
backend/app/logic/: __init__.py  charts.py  financials.py  market.py  sec.py  social.py  social_search.py  tickers.py
backend/app/services/: __init__.py  charts.py  dashboard.py  financials.py  sec.py  social.py  stocks.py
backend/app/sources/: __init__.py  errors.py  market.py  sec.py  stocks.py  twitter.py
backend/data/: watchlist.json
backend/tests/: test_cache.py  test_env.py  test_errors.py  test_logic.py  test_sec.py  test_watchlist.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  mockData.ts  types.ts
frontend/src/api/: adapters.ts  backendTypes.ts  client.ts
frontend/src/components/: ChartPanel.tsx  FinancialsPanel.tsx  LoadingState.tsx  MarketStatusIndicator.tsx  Sidebar.tsx  SocialPanel.tsx  TopNav.tsx
frontend/src/lib/: format.ts  preferences.ts
